<resources>

    <string name="preference_file_key" translatable="false">preference_key</string>


    <string name="app_name">File Manager</string>
    <string name="change_language">change language</string>
    <string name="set_language">set language</string>
    <string name="language_polish">Polish</string>
    <string name="language_english">English</string>
    <string name="choose_language">Choose language</string>
    <string name="language_set">Language set to english</string>

    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>

    <string name="unknown_date">Date unknown</string>
    <string name="delete">Delete</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_paste">Paste</string>
    <string name="delete_alert_body">Are you sure you want to delete files: </string>
    <string name="delete_alert_title">Delete files</string>

    <string name="sorting_method_header">Sort by: </string>
    <string name="sorting_method_by_name">Name</string>
    <string name="sorting_method_by_date">Date</string>
    <string name="sorting_method_by_size">Size</string>

    <string name="confirm">Confirm</string>
    <string name="no_files_selected">No files selected</string>
    <string name="files_copied">Number of copied files: </string>
    <string name="files_cutted">Number of cut files: </string>
    <string name="copy_dialog_title">Copying files</string>
    <string name="cut_dialog_title">Moving files</string>
    <string name="copy_dialog_message">Copied files</string>
    <string name="cut_dialog_message">Moved files</string>
    <string name="cancel">CANCEL</string>
    <string name="error_paste_inside_base_subfolder">You can’t paste an item into itself</string>
    <string name="delete_dialog_title">Deleting files</string>
    <string name="delete_dialog_message">Files deleted:</string>
    <string name="completed">Completed</string>

    <string name="error_deleting_files">Cannot delete files</string>

    <string name="sorting_direction_ascending">Ascending</string>
    <string name="sorting_direction_descending">Descending</string>
    <string name="error_paste">Could not paste file</string>

    <string name="paste_keep_both">KEEP BOTH</string>
    <string name="paste_skip">SKIP</string>
    <string name="paste_overwrite">OVERWRITE</string>
    <string name="paste_alert_title">Paste file</string>
    <string name="error_paste_file_exists_1">File</string>
    <string name="error_paste_file_exists_2">already exists in this directory</string>
    <string name="cannot_open_1">Cannot open</string>
    <string name="cannot_open_2">file</string>
    <string name="file_not_accessible">is not accessible</string>
    <string name="canceling">Canceling...</string>

</resources>
