<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:id="@+id/choose_language"
        android:icon="@drawable/ic_language_white_24dp"
        android:title="@string/change_language"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/choose_sorting_method"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sorting_method_header"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/copy"
        android:title="@string/menu_copy"
        app:showAsAction="never"/>

    <item android:id="@+id/cut"
        android:title="@string/menu_cut"
        app:showAsAction="never"/>

    <item android:id="@+id/paste"
        android:title="@string/menu_paste"
        app:showAsAction="never"/>

    <item android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="never"/>
    
</menu>