<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_vertical"
    android:layout_marginBottom="@dimen/margin_vertical"
    android:layout_marginLeft="@dimen/margin_horizontal"
    android:layout_marginRight="@dimen/margin_horizontal">


        <RadioGroup
            android:id="@+id/choose_language_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical">

            <RadioButton
                android:id="@+id/choose_language_polish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_polish"/>

            <RadioButton
                android:id="@+id/choose_language_engish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language_english"/>

        </RadioGroup>



    <Button
        android:id="@+id/choose_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/set_language"/>

</LinearLayout>